# FastGlobalRegistration

./: .gitignore
source/: CMakeLists.txt  Params.yaml  package.xml
source/FastGlobalRegistration/: CMakeLists.txt  app.cpp  app.h  fgr_node.cpp  generate_binary.cpp  main.cpp
source/Relocalization_configs/: icp_cfg_point-plane-run.yaml  icp_cfg_point-plane.yaml  icp_cfg_point-point-run.yaml  icp_cfg_point-point.yaml
source/launch/: fgr.launch
