<?xml version="1.0"?>
<package format="2">
  <name>fast_global_registration</name>
  <version>0.0.0</version>
  <description>ROS package of Fast Global Registration</description>

  <maintainer email="anurag.vempati@mavt.ethz.ch">Anurag Sai Vempati</maintainer>
  <author>Anurag Sai Vempati</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
